some changes in swagger and project data field
